--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Couple's For.play</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="bootstrap@5.1.3.min.css" rel="stylesheet">
-    <link href="awesome.css" rel="stylesheet">
-    <link href="animate.css" rel="stylesheet">
-    <script src="bootstrap@5.1.3.js"></script>
+    <link href="css/bootstrap@5.1.3.min.css" rel="stylesheet">
+    <link href="css/awesome.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
+    <script src="js/bootstrap@5.1.3.js"></script>
 </head>
 <body>
     <div class="container-fluid">
@@ -16,7 +16,7 @@
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">
                     <!-- <b>Couple Game</b> -->
-                    <img class="animate__animated animate__bounceIn" src="logo_1.PNG" width="70">
+                    <img class="animate__animated animate__bounceIn" src="images/logo_1.PNG" width="70">
                     <b>Couple's For.Play</b>
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -74,19 +74,19 @@
                 <!-- The slideshow/carousel -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="game1.png" alt="Los Angeles" class="d-block" >
+                        <img src="images/game1.png" alt="Los Angeles" class="d-block" >
                         <div class="carousel-caption">
                             <p>We had such a great time in LA!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="game2.png" alt="Chicago" class="d-block">
+                        <img src="images/game2.png" alt="Chicago" class="d-block">
                         <div class="carousel-caption">
                             <p>Thank you, Chicago!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="game3.png" alt="New York" class="d-block">
+                        <img src="images/game3.png" alt="New York" class="d-block">
                         <div class="carousel-caption">
                             <p>We love the Big Apple!</p>
                         </div>
