--- a/about.html
+++ b/about.html
@@ -24,10 +24,11 @@
                     <span class="navbar-toggler-icon">menu</span>
                   </button>
                   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <button class="btn btn-success" onclick="gotoPage('login')">Login</button>
-                    <button class="btn btn-danger" onclick="gotoPage('signin')">SignUp</button>   
-                    <button class="btn btn-info" onclick="gotoPage('about')">About</button>   
-                    <button class="btn btn-warning" onclick="gotoPage('contact')">Contact <span style="color:red !important;">&hearts;</span></button>   
+                    <button class="btn btn-success" onclick="gotoPage('index')">Home</button>
+                        <!-- <button class="btn btn-danger" onclick="gotoPage('signin')">SignUp</button> -->
+                        <button class="btn btn-info" onclick="gotoPage('about')">About</button>
+                        <button class="btn btn-warning" onclick="gotoPage('contact')">Contact <span
+                                style="color:red !important;">&hearts;</span></button>
 
                     <!-- <ul class="navbar-nav">
                       <li class="nav-item">
