--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <div class="content loginSignup" >
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="javascript:void(0);"  onclick="loadblock('login')">Login</a>
+                    <a class="nav-link active" aria-current="page" href="javascript:void(0);"  onclick="loadblock(this,'login')">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="javascript:void(0);" onclick="loadblock('signup')">Sign up</a>
+                    <a class="nav-link" href="javascript:void(0);" onclick="loadblock(this,'signup')">Sign up</a>
                 </li>
             </ul>
 
