hearting is added

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
         <footer></footer>
 		
     </div>
+    <img src="images/HeartBubble.gif" width="10" class="hearting">
 	
 	<link href="css/actions.css" rel="stylesheet">
     <script src="js/actions.js"></script>
