--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Couple's For.play</title>
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap@5.1.3.min.css" rel="stylesheet">
     <link href="css/awesome.css" rel="stylesheet">
