--- a/collision-detection.html
+++ b/collision-detection.html
@@ -9,13 +9,13 @@
 		body {
 			overflow: hidden;
 			canvas {
-				margin-top: 20px;
+				margin-top: 20%;
 			}
 		}
 	</style>
 	<script>
 		window.onload=function(){
-			var canvas=new createCanvas(window.screen.width-20,window.screen.height-100,"border:1px dotted black;");
+			var canvas=new createCanvas(window.screen.width-20,window.screen.height-200,"border:1px dotted black;");
 			canvas.drawCanvas();
 
 			
