--- a/collision-detection.html
+++ b/collision-detection.html
@@ -4,15 +4,24 @@
 	<title></title>
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable='no'">
+	<link href="css/bootstrap@5.1.3.min.css" rel="stylesheet">
+    <link href="css/awesome.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
+    <script src="js/bootstrap@5.1.3.js"></script>
+    <script src="js/actions.js"></script>
 	<script type="text/javascript" src="js/easy.js"></script>
 	<style>
 		body {
 			overflow: hidden;
+			* {
+				padding: 0px !important;
+				margin: 0px !important;
+			}
 		}
 	</style>
 	<script>
 		window.onload=function(){
-			var canvas=new createCanvas(window.screen.width-20,window.screen.height-200,"border:1px dotted black;");
+			var canvas=new createCanvas(window.screen.width-2,window.screen.height-200,"border:1px dotted black;");
 			canvas.drawCanvas();
 
 			canvas.setBackground("yellow");
@@ -20,6 +29,8 @@
 			var c1=new Circle(300,300,10);
 			var c2=new Circle(200,200,10);
 			var c3=new Circle(300,200,10);
+
+			var t=new Text("Hello World","50px Arial",20,100);
 
 			setup();
 			function setup(){
@@ -40,8 +51,11 @@
 				vibrate(c1,5);
 				canvas.drawCircle(c2,"black","green");
 				canvas.drawCircle(c3,"black","blue");
-				document.querySelector("#display").innerText = `
-					Green - (x: ${c2.x}, y:${c2.y})
+
+				canvas.drawText(t,"red")
+
+				t.text = `
+					Green - (x: ${Math.round(c2.x)}, y:${Math.round(c2.y)})
 					Red - (x: ${c1.x}, y:${c1.y})
 					Blue - (x: ${c3.x}, y:${c3.y})
 					`;
@@ -50,8 +64,8 @@
 
 			canvas.getCanvas().addEventListener('touchmove', function(e) { 
 				//console.log(e.touches);
-				c2.x=e.touches[0].clientX-20;
-				c2.y=e.touches[0].clientY-200;
+				c2.x=e.touches[0].clientX;
+				c2.y=e.touches[0].clientY;
 
 				if(e.touches[1]){
 					c3.x=e.touches[1].clientX;
@@ -63,7 +77,6 @@
 	</script>
 </head>
 <body>
-	<p id="display">data</p>
-	<p id="display2">data</p>
+	<div class="container"></div>
 </body>
 </html>
