--- a/pingpong/collision-detection.html
+++ b/pingpong/collision-detection.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<title></title>
-	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable='no'">
-	<link href="css/bootstrap@5.1.3.min.css" rel="stylesheet">
-    <link href="css/awesome.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-    <script src="js/bootstrap@5.1.3.js"></script>
+	<link href="../css/bootstrap@5.1.3.min.css" rel="stylesheet">
+    <link href="../css/awesome.css" rel="stylesheet">
+    <link href="../css/animate.css" rel="stylesheet">
+    <script src="../js/bootstrap@5.1.3.js"></script>
 	
-	<script type="text/javascript" src="js/easy.js"></script>
+	<script type="text/javascript" src="../js/easy.js"></script>
 	<style>
 		body {
 			overflow: hidden;
