--- a/pingpong/demoWS.html
+++ b/pingpong/demoWS.html
@@ -17,7 +17,7 @@
                 alert("WebSocket is supported by your Browser!");
 
                 // Let us open a web socket
-                var ws = new WebSocket("ws://localhost:1111/echo");
+                var ws = new WebSocket("wss://chetansharma912.github.io/Couplesforplay/pingpong/");
 
                 ws.onopen = function () {
 
