--- a/pingpong/index.html
+++ b/pingpong/index.html
@@ -39,7 +39,7 @@
             let endLine = new Rectangle(0, windowHeight*0.98, windowWidth, windowHeight);
 
             // Ball here
-			let ball= new Circle(300,200,10);
+			let ball= new Circle((windowWidth*0.50),(windowHeight*0.50),10);
 
             // user one
             let userOne = new Circle(0 , (windowHeight*0.90)-20 ,40);
@@ -51,7 +51,7 @@
             let userTwoText=new Text("0","50px Arial", (windowWidth*0.50)-10 , windowHeight*0.75);
             
 
-			let newx = 1, newy = 1;
+			let newx = 0, newy = 0;
 
 			
 
@@ -97,25 +97,35 @@
 				}
 
 				if(ball.x< ( 0 + ball.radius/2)){
-					newx = randomBetween(1,3);
+					newx = randomBetween(1,4);
 				}
 				if(ball.x> (windowWidth - ball.radius/2)){
-					newx = -1*randomBetween(1,3);
+					newx = -1*randomBetween(1,4);
                     
 				}
-				if(ball.y> (windowHeight - ball.radius/2)){
+				if(ball.y+10> (windowHeight - ball.radius/2)){
 					newy= -1*randomBetween(1,3);
                     userOneText.text = parseInt(userOneText.text)+1;
+                    ball.x = windowWidth/2;
+                    ball.y = windowHeight/2;
+                    newx = 0;
+                    newy = 0;
                     if(parseInt(userOneText.text)>=10){
-                        // alert("Blue Win");
-                        userOneText.text = "0";
+                        alert("Blue Win");
+                        userOneText.text = 0;
+                        userTwoText.text = 0;
                     }
 				}
-				if(ball.y< (0 + ball.radius/2) ){
+				if(ball.y-10< (0 + ball.radius/2) ){
 					newy= randomBetween(1,3);
                     userTwoText.text = parseInt(userTwoText.text)+1;
+                    ball.x = windowWidth/2;
+                    ball.y = windowHeight/2;
+                    newx = 0;
+                    newy = 0;
                     if(parseInt(userTwoText.text)>=10){
-                        // alert("Pink Win");
+                        alert("Pink Win");
+                        userOneText.text = 0;
                         userTwoText.text = 0;
                     }
 				}				
