index page changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         
         <!-- sliding window START -->
-        <div class="sliding-here">
+        <!-- <div class="sliding-here">
             <input type="radio" name="position">
             <input type="radio" name="position" checked>
             <input type="radio" name="position">
@@ -65,7 +65,7 @@
                     <button class="btn btn-success">Play</button>
                 </div>
             </main>
-        </div>
+        </div> -->
         <!-- sliding window END -->
 
         <!-- Login / Registration Modal section -->
