modification of files and directory

--- a/error.html
+++ b/error.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Couple's For.play</title>
+    <title>Error - Couple's For.play</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap@5.1.3.min.css" rel="stylesheet">
-    <link href="css/awesome.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-    <script src="js/bootstrap@5.1.3.js"></script>
-    <script src="js/actions.js"></script>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
 </head>
 <body class="errorpage">
     <div class="container">
@@ -20,8 +17,14 @@
         </p>
     </div>
 	
-	<link href="css/actions.css" rel="stylesheet">
-    <script src="js/actions.js"></script>
+	<!-- Styling CSS -->
+    <link href="css/bootstrap@5.1.3.min.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+    <link href="css/error-style.css" rel="stylesheet">
+
+    <!-- Scripts -->
+    <script src="js/bootstrap@5.1.3.js"></script>
+    <script src="js/main.js"></script>
 	
 </body>
 </html>
