--- a/index.html
+++ b/index.html
@@ -9,17 +9,64 @@
 </head>
 <body>
     <div class="container-fluid">
+
         <div class="div-two text-center carousel">
-            <h1 class="banner">
-                <p>Carousel</p>
-            </h1>
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/carousel/game1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <h5>First slide</h5>
+                            <p>Some representative</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/carousel/game2.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <h5>Second slide</h5>
+                            <p>Some representative</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/carousel/game3.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <h5>Third slide</h5>
+                            <p>Some representative</p>
+                        </div>
+                    </div>
+                    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleSlidesOnly"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleSlidesOnly"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button> -->
+                </div>
+            </div>
         </div>
 
         <div class="div-one text-center">
             <h1 class="banner">
-                <p>The World's #1 Website for Couple's to Play Online Games</p>
-                <button class="btn btn-success text-light" data-bs-toggle="modal" data-bs-target="#loginModal">Start Playing with your Partner <span
-                    style="color:red !important;">&hearts;</span></button>
+                <p>
+                    The World's #1 Website for Couple's to Play Online Games
+                </p>
+                <p>
+                    <button class="btn btn-success text-light" data-bs-toggle="modal" data-bs-target="#loginModal">
+                        Start Playing with your Partner
+                        <span style="color:red !important;">&hearts;</span>
+                    </button>
+                </p>
             </h1>
         </div>
         
